src/main/java/cn/edu/thssdb/parser/SQLParser.java
// Generated from D:/MyProject/ThssDB/src/main/java/cn/edu/thssdb/parser\SQL.g4 by ANTLR 4.9.1
package cn.edu.thssdb.parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SQLParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, EQ = 6, NE = 7, LT = 8, GT = 9, LE = 10,
            GE = 11, ADD = 12, SUB = 13, MUL = 14, DIV = 15, AND = 16, OR = 17, T_INT = 18, T_LONG = 19,
            T_FLOAT = 20, T_DOUBLE = 21, T_STRING = 22, K_ADD = 23, K_ALL = 24, K_AS = 25, K_BY = 26,
            K_COLUMN = 27, K_CREATE = 28, K_DATABASE = 29, K_DATABASES = 30, K_DELETE = 31,
            K_DISTINCT = 32, K_DROP = 33, K_EXISTS = 34, K_FROM = 35, K_GRANT = 36, K_IF = 37,
            K_IDENTIFIED = 38, K_INSERT = 39, K_INTO = 40, K_JOIN = 41, K_KEY = 42, K_NOT = 43,
            K_NULL = 44, K_ON = 45, K_PRIMARY = 46, K_QUIT = 47, K_REVOKE = 48, K_SELECT = 49,
            K_SET = 50, K_SHOW = 51, K_TABLE = 52, K_TABLES = 53, K_TO = 54, K_UPDATE = 55, K_USE = 56,
            K_USER = 57, K_VALUES = 58, K_VIEW = 59, K_WHERE = 60, K_BEGIN = 61, K_TRANSACTION = 62,
            K_COMMIT = 63, IDENTIFIER = 64, NUMERIC_LITERAL = 65, EXPONENT = 66, STRING_LITERAL = 67,
            SINGLE_LINE_COMMENT = 68, MULTILINE_COMMENT = 69, SPACES = 70;
    public static final int
            RULE_parse = 0, RULE_sql_stmt_list = 1, RULE_sql_stmt = 2, RULE_begin_transaction_stmt = 3,
            RULE_commit_stmt = 4, RULE_create_db_stmt = 5, RULE_drop_db_stmt = 6,
            RULE_create_user_stmt = 7, RULE_drop_user_stmt = 8, RULE_create_table_stmt = 9,
            RULE_show_meta_stmt = 10, RULE_grant_stmt = 11, RULE_revoke_stmt = 12,
            RULE_use_db_stmt = 13, RULE_delete_stmt = 14, RULE_drop_table_stmt = 15,
            RULE_show_db_stmt = 16, RULE_quit_stmt = 17, RULE_show_table_stmt = 18,
            RULE_insert_stmt = 19, RULE_value_entry = 20, RULE_select_stmt = 21, RULE_create_view_stmt = 22,
            RULE_drop_view_stmt = 23, RULE_update_stmt = 24, RULE_column_def = 25,
            RULE_type_name = 26, RULE_column_constraint = 27, RULE_multiple_condition = 28,
            RULE_condition = 29, RULE_comparer = 30, RULE_comparator = 31, RULE_expression = 32,
            RULE_table_constraint = 33, RULE_result_column = 34, RULE_table_query = 35,
            RULE_auth_level = 36, RULE_literal_value = 37, RULE_column_full_name = 38,
            RULE_database_name = 39, RULE_table_name = 40, RULE_user_name = 41, RULE_column_name = 42,
            RULE_view_name = 43, RULE_password = 44;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public SQLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "parse", "sql_stmt_list", "sql_stmt", "begin_transaction_stmt", "commit_stmt",
                "create_db_stmt", "drop_db_stmt", "create_user_stmt", "drop_user_stmt",
                "create_table_stmt", "show_meta_stmt", "grant_stmt", "revoke_stmt", "use_db_stmt",
                "delete_stmt", "drop_table_stmt", "show_db_stmt", "quit_stmt", "show_table_stmt",
                "insert_stmt", "value_entry", "select_stmt", "create_view_stmt", "drop_view_stmt",
                "update_stmt", "column_def", "type_name", "column_constraint", "multiple_condition",
                "condition", "comparer", "comparator", "expression", "table_constraint",
                "result_column", "table_query", "auth_level", "literal_value", "column_full_name",
                "database_name", "table_name", "user_name", "column_name", "view_name",
                "password"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "';'", "'('", "','", "')'", "'.'", "'='", "'<>'", "'<'", "'>'",
                "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'&&'", "'||'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, "EQ", "NE", "LT", "GT", "LE", "GE",
                "ADD", "SUB", "MUL", "DIV", "AND", "OR", "T_INT", "T_LONG", "T_FLOAT",
                "T_DOUBLE", "T_STRING", "K_ADD", "K_ALL", "K_AS", "K_BY", "K_COLUMN",
                "K_CREATE", "K_DATABASE", "K_DATABASES", "K_DELETE", "K_DISTINCT", "K_DROP",
                "K_EXISTS", "K_FROM", "K_GRANT", "K_IF", "K_IDENTIFIED", "K_INSERT",
                "K_INTO", "K_JOIN", "K_KEY", "K_NOT", "K_NULL", "K_ON", "K_PRIMARY",
                "K_QUIT", "K_REVOKE", "K_SELECT", "K_SET", "K_SHOW", "K_TABLE", "K_TABLES",
                "K_TO", "K_UPDATE", "K_USE", "K_USER", "K_VALUES", "K_VIEW", "K_WHERE",
                "K_BEGIN", "K_TRANSACTION", "K_COMMIT", "IDENTIFIER", "NUMERIC_LITERAL",
                "EXPONENT", "STRING_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT",
                "SPACES"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "SQL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final ParseContext parse() throws RecognitionException {
        ParseContext _localctx = new ParseContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_parse);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(90);
                sql_stmt_list();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Sql_stmt_listContext sql_stmt_list() throws RecognitionException {
        Sql_stmt_listContext _localctx = new Sql_stmt_listContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_sql_stmt_list);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(95);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__0) {
                    {
                        {
                            setState(92);
                            match(T__0);
                        }
                    }
                    setState(97);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(98);
                sql_stmt();
                setState(107);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(100);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                do {
                                    {
                                        {
                                            setState(99);
                                            match(T__0);
                                        }
                                    }
                                    setState(102);
                                    _errHandler.sync(this);
                                    _la = _input.LA(1);
                                } while (_la == T__0);
                                setState(104);
                                sql_stmt();
                            }
                        }
                    }
                    setState(109);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
                setState(113);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__0) {
                    {
                        {
                            setState(110);
                            match(T__0);
                        }
                    }
                    setState(115);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Sql_stmtContext sql_stmt() throws RecognitionException {
        Sql_stmtContext _localctx = new Sql_stmtContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_sql_stmt);
        try {
            setState(137);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(116);
                    create_table_stmt();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(117);
                    create_db_stmt();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(118);
                    create_user_stmt();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(119);
                    drop_db_stmt();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(120);
                    drop_user_stmt();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(121);
                    delete_stmt();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(122);
                    drop_table_stmt();
                }
                break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(123);
                    insert_stmt();
                }
                break;
                case 9:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(124);
                    select_stmt();
                }
                break;
                case 10:
                    enterOuterAlt(_localctx, 10);
                {
                    setState(125);
                    create_view_stmt();
                }
                break;
                case 11:
                    enterOuterAlt(_localctx, 11);
                {
                    setState(126);
                    drop_view_stmt();
                }
                break;
                case 12:
                    enterOuterAlt(_localctx, 12);
                {
                    setState(127);
                    grant_stmt();
                }
                break;
                case 13:
                    enterOuterAlt(_localctx, 13);
                {
                    setState(128);
                    revoke_stmt();
                }
                break;
                case 14:
                    enterOuterAlt(_localctx, 14);
                {
                    setState(129);
                    use_db_stmt();
                }
                break;
                case 15:
                    enterOuterAlt(_localctx, 15);
                {
                    setState(130);
                    show_db_stmt();
                }
                break;
                case 16:
                    enterOuterAlt(_localctx, 16);
                {
                    setState(131);
                    show_table_stmt();
                }
                break;
                case 17:
                    enterOuterAlt(_localctx, 17);
                {
                    setState(132);
                    show_meta_stmt();
                }
                break;
                case 18:
                    enterOuterAlt(_localctx, 18);
                {
                    setState(133);
                    quit_stmt();
                }
                break;
                case 19:
                    enterOuterAlt(_localctx, 19);
                {
                    setState(134);
                    update_stmt();
                }
                break;
                case 20:
                    enterOuterAlt(_localctx, 20);
                {
                    setState(135);
                    begin_transaction_stmt();
                }
                break;
                case 21:
                    enterOuterAlt(_localctx, 21);
                {
                    setState(136);
                    commit_stmt();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Begin_transaction_stmtContext begin_transaction_stmt() throws RecognitionException {
        Begin_transaction_stmtContext _localctx = new Begin_transaction_stmtContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_begin_transaction_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(139);
                match(K_BEGIN);
                setState(140);
                match(K_TRANSACTION);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Commit_stmtContext commit_stmt() throws RecognitionException {
        Commit_stmtContext _localctx = new Commit_stmtContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_commit_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(142);
                match(K_COMMIT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Create_db_stmtContext create_db_stmt() throws RecognitionException {
        Create_db_stmtContext _localctx = new Create_db_stmtContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_create_db_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(144);
                match(K_CREATE);
                setState(145);
                match(K_DATABASE);
                setState(146);
                database_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Drop_db_stmtContext drop_db_stmt() throws RecognitionException {
        Drop_db_stmtContext _localctx = new Drop_db_stmtContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_drop_db_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(148);
                match(K_DROP);
                setState(149);
                match(K_DATABASE);
                setState(152);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == K_IF) {
                    {
                        setState(150);
                        match(K_IF);
                        setState(151);
                        match(K_EXISTS);
                    }
                }

                setState(154);
                database_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Create_user_stmtContext create_user_stmt() throws RecognitionException {
        Create_user_stmtContext _localctx = new Create_user_stmtContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_create_user_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(156);
                match(K_CREATE);
                setState(157);
                match(K_USER);
                setState(158);
                user_name();
                setState(159);
                match(K_IDENTIFIED);
                setState(160);
                match(K_BY);
                setState(161);
                password();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Drop_user_stmtContext drop_user_stmt() throws RecognitionException {
        Drop_user_stmtContext _localctx = new Drop_user_stmtContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_drop_user_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(163);
                match(K_DROP);
                setState(164);
                match(K_USER);
                setState(167);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == K_IF) {
                    {
                        setState(165);
                        match(K_IF);
                        setState(166);
                        match(K_EXISTS);
                    }
                }

                setState(169);
                user_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Create_table_stmtContext create_table_stmt() throws RecognitionException {
        Create_table_stmtContext _localctx = new Create_table_stmtContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_create_table_stmt);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(171);
                match(K_CREATE);
                setState(172);
                match(K_TABLE);
                setState(173);
                table_name();
                setState(174);
                match(T__1);
                setState(175);
                column_def();
                setState(180);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(176);
                                match(T__2);
                                setState(177);
                                column_def();
                            }
                        }
                    }
                    setState(182);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
                }
                setState(185);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__2) {
                    {
                        setState(183);
                        match(T__2);
                        setState(184);
                        table_constraint();
                    }
                }

                setState(187);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Show_meta_stmtContext show_meta_stmt() throws RecognitionException {
        Show_meta_stmtContext _localctx = new Show_meta_stmtContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_show_meta_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(189);
                match(K_SHOW);
                setState(190);
                match(K_TABLE);
                setState(191);
                table_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Grant_stmtContext grant_stmt() throws RecognitionException {
        Grant_stmtContext _localctx = new Grant_stmtContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_grant_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(193);
                match(K_GRANT);
                setState(194);
                auth_level();
                setState(199);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__2) {
                    {
                        {
                            setState(195);
                            match(T__2);
                            setState(196);
                            auth_level();
                        }
                    }
                    setState(201);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(202);
                match(K_ON);
                setState(203);
                table_name();
                setState(204);
                match(K_TO);
                setState(205);
                user_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Revoke_stmtContext revoke_stmt() throws RecognitionException {
        Revoke_stmtContext _localctx = new Revoke_stmtContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_revoke_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(207);
                match(K_REVOKE);
                setState(208);
                auth_level();
                setState(213);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__2) {
                    {
                        {
                            setState(209);
                            match(T__2);
                            setState(210);
                            auth_level();
                        }
                    }
                    setState(215);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(216);
                match(K_ON);
                setState(217);
                table_name();
                setState(218);
                match(K_FROM);
                setState(219);
                user_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Use_db_stmtContext use_db_stmt() throws RecognitionException {
        Use_db_stmtContext _localctx = new Use_db_stmtContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_use_db_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(221);
                match(K_USE);
                setState(222);
                database_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Delete_stmtContext delete_stmt() throws RecognitionException {
        Delete_stmtContext _localctx = new Delete_stmtContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_delete_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(224);
                match(K_DELETE);
                setState(225);
                match(K_FROM);
                setState(226);
                table_name();
                setState(229);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == K_WHERE) {
                    {
                        setState(227);
                        match(K_WHERE);
                        setState(228);
                        multiple_condition(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Drop_table_stmtContext drop_table_stmt() throws RecognitionException {
        Drop_table_stmtContext _localctx = new Drop_table_stmtContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_drop_table_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(231);
                match(K_DROP);
                setState(232);
                match(K_TABLE);
                setState(235);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == K_IF) {
                    {
                        setState(233);
                        match(K_IF);
                        setState(234);
                        match(K_EXISTS);
                    }
                }

                setState(237);
                table_name();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Show_db_stmtContext show_db_stmt() throws RecognitionException {
        Show_db_stmtContext _localctx = new Show_db_stmtContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_show_db_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(239);
                match(K_SHOW);
                setState(240);
                match(K_DATABASES);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Quit_stmtContext quit_stmt() throws RecognitionException {
        Quit_stmtContext _localctx = new Quit_stmtContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_quit_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(242);
                match(K_QUIT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Show_table_stmtContext show_table_stmt() throws RecognitionException {
        Show_table_stmtContext _localctx = new Show_table_stmtContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_show_table_stmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(244);
                match(K_SHOW);
                setState(245);
                match(K_TABLES);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final Insert_stmtContext insert_stmt() throws RecognitionException {
        Insert_stmtContext _localctx = new Insert_stmtContext(_ctx, getState());
        enterRule(_localctx, 38, RULE_insert_stmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(247);
                match(K_INSERT);
                setState(248);
                match(K_INTO);
                setState(249);
                table_name();
                setState(261);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__1) {
                    {
                        setState(250);
                        match(T__1);
                        setState(251);
                        column_name();
                        setState(256);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__2) {
                            {
                                {
                                    setState(252);
                                    match(T__2);
                                    setState(253);
                                    column_name();
                                }
                            }
                            setState(258);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
